Restructure build.gradle to perform multiple tasks